Implemented basic layout

--- a/index.html
+++ b/index.html
@@ -4,38 +4,44 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Calculator</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="style1.css" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,700;1,300&display=swap" rel="stylesheet">
   </head>
   <body>
+    <h1>Calculator</h1>
     <div class="container">
-        <div class="display">0</div>
+        <div class="display">222</div>
         <div class="buttons-grid">
-            <div class="btn clear" data-data-value="clear">AC</div>
-            <div class="btn sign" data-data-value="sign">+/-</div>
-            <div class="btn nul" data-value="nul">nul</div>
+            <div class="btn" data-value="percent">%</div>
+            <div class="btn operator" data-value="divide">÷</div>
             <div class="btn operator" data-value="multiply">x</div>
+            <div class="btn operator" data-value="subtract">-</div>
+            <div class="btn clear" data-value="C">C</div>
 
             <div class="btn digit" data-value="7">7</div>
             <div class="btn digit" data-value="8">8</div>
             <div class="btn digit" data-value="9">9</div>
-            <div class="btn operator" data-value="divide">÷</div>
+            <div class="btn clear" data-value="AC">AC</div>
+            <div class="btn operator" data-value="add">+</div>
 
 
             <div class="btn digit" data-value="4">4</div>
             <div class="btn digit" data-value="5">5</div>
             <div class="btn digit" data-value="6">6</div>
-            <div class="btn operator" data-value="subtract">-</div>
+            <div class="btn" data-value="close">(</div>
 
 
 
             <div class="btn digit" data-value="1">1</div>
             <div class="btn digit" data-value="2">2</div>
             <div class="btn digit" data-value="3">3</div>
-            <div class="btn operator" data-value="add">+</div>
+            <div class="btn" data-value="close">)</div>
+
 
             <div class="btn digit" data-value="0">0</div>
             <div class="btn decimal" data-value=".">.</div>
             <div class="btn equal" data-value="equal">=</div>
+            <div class="btn sign" data-value="sign">+/-</div>
 
         </div>
     </div>
