--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Calculator</title>
     <link href="style1.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,700;1,300&display=swap" rel="stylesheet">
+    <script src="script.js" type="module" defer></script>
+
   </head>
   <body>
     <h1>Calculator</h1>
@@ -52,6 +54,5 @@
 
 
 
-    <script src="script.js"></script>
   </body>
 </html>
