Finish layout and logic

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <div class="container">
         <div class="display">0</div>
         <div class="buttons-grid">
-            <div class="btn" data-value="percent">%</div>
+            <div class="btn sign" data-value="sign">+/-</div>
+            <!-- <div class="btn" data-value="percent">%</div> -->
             <div class="btn operator" data-value="divide">÷</div>
             <div class="btn operator" data-value="multiply">x</div>
             <div class="btn operator" data-value="subtract">-</div>
@@ -30,20 +31,19 @@
             <div class="btn digit" data-value="4">4</div>
             <div class="btn digit" data-value="5">5</div>
             <div class="btn digit" data-value="6">6</div>
-            <div class="btn" data-value="close">(</div>
+            <!-- <div class="btn" data-value="close">(</div> -->
 
 
 
             <div class="btn digit" data-value="1">1</div>
             <div class="btn digit" data-value="2">2</div>
             <div class="btn digit" data-value="3">3</div>
-            <div class="btn" data-value="close">)</div>
+            <!-- <div class="btn" data-value="close">)</div> -->
 
 
             <div class="btn digit" data-value="0">0</div>
             <div class="btn decimal" data-value=".">.</div>
             <div class="btn equal" data-value="equal">=</div>
-            <div class="btn sign" data-value="sign">+/-</div>
 
         </div>
     </div>
