--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="style1.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,700;1,300&display=swap" rel="stylesheet">
     <script src="script.js" type="module" defer></script>
+    <script src="https://kit.fontawesome.com/9dda6aa9df.js" crossorigin="anonymous"></script>
 
   </head>
   <body>
@@ -53,6 +54,17 @@
 
 
 
+    <footer>
+      Copyright © 2021 nguyenlekhtn 
+      <ul class="social-list">
+        <li class="social-list__item"><a href="https://github.com/nguyenlekhtn" class="social-list__link">
+          <i class="fab fa-github icon"></i>
+        </a></li>
+        <li class="social-list__item"><a href="https://www.linkedin.com/in/le-nguyen-0bb862144/" class="social-list__link">
+          <i class="fab fa-linkedin"></i>
+        </a></li>
+      </ul>
 
+    </footer>
   </body>
 </html>
